--- a/index.html
+++ b/index.html
@@ -4,9 +4,77 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+  <title>AkraDEV Portfolio Page</title>
+
+  <!-- Bootstrap CSS Link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
+  <!-- Fonts Link -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Modak&display=swap" rel="stylesheet">
+  
+  <!-- CSS Link -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <!-- Header / Navbar -->
+  <div class="container">
+    <div class="row">
+      <div class="col-6 px-4">
+        <a href="#" class="logo">Akra<span class="logo-dev">DEV</span></a>
+      </div>
+      <div class="col-6 d-flex justify-content-end">
+        <nav class="navbar px-4">
+          <ul class="nav-menu">
+              <li class="nav-item">
+                  <a href="#" class="nav-link">Services</a>
+              </li>
+              <li class="nav-item">
+                  <a href="#" class="nav-link">Blog</a>
+              </li>
+              <li class="nav-item">
+                  <a href="#" class="nav-link">About</a>
+              </li>
+              <li class="nav-item">
+                  <a href="#" class="nav-link">Contact</a>
+              </li>
+          </ul>
+          <!-- Hamburger -->
+          <div class="hamburger">
+              <span class="bar"></span>
+              <span class="bar"></span>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
+
+  <!-- Home Section -->
+  <div id="home" class="container px-4 text-center">
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <img class="img-fluid" src="./images/myEyes Kopie.jpeg" alt="">
+      </div>
+      <div class="col-12 col-md-6 d-flex justify-content-center align-items-end eyes-section">
+        <h2 class="eyes-text">Am <span class="name">Akradeth Tayarat</span></h2>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-12 col-md-12">Nose image</div>
+      <div class="col-12 col-md-12">Nose text</div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-12">Mouth text2</div>
+      <div class="col-12 col-md-12">Mouth image</div>
+      <div class="col-12 col-md-12">Mouth text1</div>
+      <div class="col-12 col-md-12">Mouth text3</div>
+    </div>
+  </div>
+  <!-- Bootstrap JS Link -->
+  <script src="main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
