--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div id="home" class="container px-4 text-center">
     <div class="row">
       <div class="col-12 col-md-6">
-        <img class="img-fluid" src="./images/myEyes Kopie.jpeg" alt="">
+        <img class="img-fluid eyes-img" src="./images/myEyes Kopie.jpeg" alt="image of eyes">
       </div>
       <div class="col-12 col-md-6 d-flex justify-content-center align-items-end eyes-section">
         <h2 class="eyes-text">Am <span class="name">Akradeth Tayarat</span></h2>
@@ -63,14 +63,28 @@
     </div>
     <hr>
     <div class="row">
-      <div class="col-12 col-md-12">Nose image</div>
-      <div class="col-12 col-md-12">Nose text</div>
+      <div class="col-12 col-md-6 d-flex justify-content-center align-items-end nose-section">
+        <h2 class="nose-text">A <span class="webdev">Web Developer</span> everyone</h2>
+      </div>
+      <div class="col-12 col-md-6">
+        <img class="img-fluid nose-img" src="./images/myNose Kopie.jpeg" alt="image of a nose">
+      </div>
     </div>
+    <hr>
     <div class="row">
-      <div class="col-12 col-md-12">Mouth text2</div>
-      <div class="col-12 col-md-12">Mouth image</div>
-      <div class="col-12 col-md-12">Mouth text1</div>
-      <div class="col-12 col-md-12">Mouth text3</div>
+      <div class="col-12 d-flex justify-content-center">
+        <h2>It is said by</h2>
+      </div>
+      <div class="col-12 d-flex justify-content-center">
+        <h2 class="word-of-text">Word of</h2>
+      </div>
+      <div class="col-12"><img class="img-fluid mouth-img" src="./images/myMouth Kopie.jpeg" alt=""></div>
+      <div class="col d-flex justify-content-end align-items-center">
+        <h2>that he is a good</h2>
+      </div>
+      <div class="col d-flex align-items-center">
+        <h2 class="number-one"><span class="number-character">#</span>1</h2>
+      </div>
     </div>
   </div>
   <!-- Bootstrap JS Link -->
