--- a/index.html
+++ b/index.html
@@ -52,37 +52,41 @@
   </div>
 
   <!-- Home Section -->
+  <!-- Eyes Section -->
   <div id="home" class="container px-4 text-center">
     <div class="row">
       <div class="col-12 col-md-6">
-        <img class="img-fluid eyes-img" src="./images/myEyes Kopie.jpeg" alt="image of eyes">
+        <img loading="lazy" class="img-fluid eyes-img" src="./images/myEyes Kopie.jpeg" alt="image of eyes">
       </div>
       <div class="col-12 col-md-6 d-flex justify-content-center align-items-end eyes-section">
         <h2 class="eyes-text">Am <span class="name">Akradeth Tayarat</span></h2>
       </div>
     </div>
     <hr>
+    <!-- Nose Section -->
     <div class="row">
       <div class="col-12 col-md-6 d-flex justify-content-center align-items-end nose-section">
         <h2 class="nose-text">A <span class="webdev">Web Developer</span> everyone</h2>
       </div>
       <div class="col-12 col-md-6">
-        <img class="img-fluid nose-img" src="./images/myNose Kopie.jpeg" alt="image of a nose">
+        <img loading="lazy" class="img-fluid nose-img" src="./images/myNose Kopie.jpeg" alt="image of a nose">
       </div>
     </div>
     <hr>
+    <!-- Mouth Section -->
     <div class="row">
-      <div class="col-12 d-flex justify-content-center">
-        <h2>It is said by</h2>
+      <div class="col-12 col-md d-flex justify-content-center">
+        <h2>It is said by <span class="word-of-text-hidden">word of</span></h2>
       </div>
-      <div class="col-12 d-flex justify-content-center">
+      <div class="hide col-12 col-md d-flex justify-content-center">
         <h2 class="word-of-text">Word of</h2>
       </div>
-      <div class="col-12"><img class="img-fluid mouth-img" src="./images/myMouth Kopie.jpeg" alt=""></div>
-      <div class="col d-flex justify-content-end align-items-center">
+      <div class="col-12 col-md">
+        <img loading="lazy" class="img-fluid mouth-img" src="./images/myMouth Kopie.jpeg" alt=""></div>
+      <div class="col col-md d-flex justify-content-end align-items-center">
         <h2>that he is a good</h2>
       </div>
-      <div class="col d-flex align-items-center">
+      <div class="col col-md d-flex align-items-center">
         <h2 class="number-one"><span class="number-character">#</span>1</h2>
       </div>
     </div>
