--- a/index.html
+++ b/index.html
@@ -75,21 +75,27 @@
     <hr>
     <!-- Mouth Section -->
     <div class="row">
-      <div class="col-12 col-md d-flex justify-content-center">
-        <h2>It is said by <span class="word-of-text-hidden">word of</span></h2>
+            <div class="col-12 col-md-2 d-flex it-is-said-text">
+              <div class="row">
+                <div class="col-12 d-flex justify-content-center align-items-end">
+                  <h2>It is said by</h2>
+                </div>
+                <div class="col-12 d-flex justify-content-center">
+                  <h2 class="word-of-text">Word of</h2>
+                </div>
+              </div>
+            </div>
+      <div class="col-12 col-md-6">
+        <img loading="lazy" class="img-fluid mouth-img" src="./images/myMouth Kopie.jpeg" alt="image of a mouth">
       </div>
-      <div class="hide col-12 col-md d-flex justify-content-center">
-        <h2 class="word-of-text">Word of</h2>
-      </div>
-      <div class="col-12 col-md">
-        <img loading="lazy" class="img-fluid mouth-img" src="./images/myMouth Kopie.jpeg" alt=""></div>
-      <div class="col col-md d-flex justify-content-end align-items-center">
+      <div class="col col-md-3 d-flex justify-content-center align-items-end good-one-text">
         <h2>that he is a good</h2>
       </div>
-      <div class="col col-md d-flex align-items-center">
+      <div class="col col-md-1 d-flex align-items-center">
         <h2 class="number-one"><span class="number-character">#</span>1</h2>
       </div>
     </div>
+    <hr class="support-hr">
   </div>
   <!-- Bootstrap JS Link -->
   <script src="main.js"></script>
