--- a/index.html
+++ b/index.html
@@ -55,43 +55,36 @@
   <!-- Eyes Section -->
   <div id="home" class="container px-4 text-center">
     <div class="row">
-      <div class="col-12 col-md-6">
+      <div class="col-12 col-lg-6">
         <img loading="lazy" class="img-fluid eyes-img" src="./images/myEyes Kopie.jpeg" alt="image of eyes">
       </div>
-      <div class="col-12 col-md-6 d-flex justify-content-center align-items-end eyes-section">
+      <div class="col-12 col-lg-6 d-flex justify-content-center align-items-end eyes-section">
         <h2 class="eyes-text">Am <span class="name">Akradeth Tayarat</span></h2>
       </div>
     </div>
     <hr>
     <!-- Nose Section -->
     <div class="row">
-      <div class="col-12 col-md-6 d-flex justify-content-center align-items-end nose-section">
+      <div class="col-12 col-lg-6 d-flex justify-content-center align-items-end nose-section">
         <h2 class="nose-text">A <span class="webdev">Web Developer</span> everyone</h2>
       </div>
-      <div class="col-12 col-md-6">
+      <div class="col-12 col-lg-6">
         <img loading="lazy" class="img-fluid nose-img" src="./images/myNose Kopie.jpeg" alt="image of a nose">
       </div>
     </div>
     <hr>
     <!-- Mouth Section -->
     <div class="row">
-            <div class="col-12 col-md-2 d-flex it-is-said-text">
-              <div class="row">
-                <div class="col-12 d-flex justify-content-center align-items-end">
-                  <h2>It is said by</h2>
-                </div>
-                <div class="col-12 d-flex justify-content-center">
-                  <h2 class="word-of-text">Word of</h2>
-                </div>
-              </div>
-            </div>
-      <div class="col-12 col-md-6">
+      <div class="col-12">
+        <h2>It is said by <span class="word-of-text">word of</span> </h2>
+      </div>          
+      <div class="col-12">
         <img loading="lazy" class="img-fluid mouth-img" src="./images/myMouth Kopie.jpeg" alt="image of a mouth">
       </div>
-      <div class="col col-md-3 d-flex justify-content-center align-items-end good-one-text">
+      <div class="col-6 d-flex align-items-center justify-content-end">
         <h2>that he is a good</h2>
       </div>
-      <div class="col col-md-1 d-flex align-items-center">
+      <div class="col-6 d-flex align-items-center justify-content-start">
         <h2 class="number-one"><span class="number-character">#</span>1</h2>
       </div>
     </div>
