--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
       <div class="col-12">
         <img loading="lazy" class="img-fluid mouth-img" src="./images/myMouth Kopie.jpeg" alt="image of a mouth">
       </div>
-      <div class="col-6 d-flex align-items-center justify-content-end">
+      <div class="col-6 px-lg-3 d-flex align-items-center justify-content-end">
         <h2>that he is a good</h2>
       </div>
-      <div class="col-6 d-flex align-items-center justify-content-start">
+      <div class="col-6 px-lg-3 d-flex align-items-center justify-content-start">
         <h2 class="number-one"><span class="number-character">#</span>1</h2>
       </div>
     </div>
