--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
     <hr>
     <!-- Mouth Section -->
     <div class="row">
-      <div class="col-12">
-        <h2>It is said by <span class="word-of-text">word of</span> </h2>
+      <div class="col-12 col-lg-1 align-self-lg-end">
+        <h2 class="said">It is said by <span class="word-of-text">word of</span> </h2>
       </div>          
-      <div class="col-12">
+      <div class="col-12 col-lg-6">
         <img loading="lazy" class="img-fluid mouth-img" src="./images/myMouth Kopie.jpeg" alt="image of a mouth">
       </div>
-      <div class="col-6 px-lg-3 d-flex align-items-center justify-content-end">
+      <div class="col-6 col-lg-3 px-lg-3 d-flex align-items-center justify-content-end justify-content-lg-center align-self-lg-end good-one">
         <h2>that he is a good</h2>
       </div>
-      <div class="col-6 px-lg-3 d-flex align-items-center justify-content-start">
+      <div class="col-6 col-lg-2 px-lg-3 d-flex align-items-center justify-content-start">
         <h2 class="number-one"><span class="number-character">#</span>1</h2>
       </div>
     </div>
