--- a/index.html
+++ b/index.html
@@ -1,96 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AkraDEV Portfolio Page</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AkraDEV Portfolio Page</title>
 
-  <!-- Bootstrap CSS Link -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  
-  <!-- Fonts Link -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Modak&display=swap" rel="stylesheet">
-  
-  <!-- CSS Link -->
-  <link rel="stylesheet" href="style.css">
-</head>
+    <!-- Bootstrap CSS Link -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
 
-<body>
-  <!-- Header / Navbar -->
-  <div class="container">
-    <div class="row">
-      <div class="col-6 px-4">
-        <a href="#" class="logo">Akra<span class="logo-dev">DEV</span></a>
-      </div>
-      <div class="col-6 d-flex justify-content-end">
-        <nav class="navbar px-4">
-          <ul class="nav-menu">
+    <!-- Fonts Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Modak&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <!-- Header / Navbar -->
+    <div class="container">
+      <div class="row">
+        <div class="col-6 px-4">
+          <a href="#" class="logo">Akra<span class="logo-dev">DEV</span></a>
+        </div>
+        <div class="col-6 d-flex justify-content-end">
+          <nav class="navbar px-4">
+            <ul class="nav-menu">
               <li class="nav-item">
-                  <a href="#" class="nav-link">Services</a>
+                <a href="#" class="nav-link">Services</a>
               </li>
               <li class="nav-item">
-                  <a href="#" class="nav-link">Blog</a>
+                <a href="#" class="nav-link">Blog</a>
               </li>
               <li class="nav-item">
-                  <a href="#" class="nav-link">About</a>
+                <a href="#" class="nav-link">About</a>
               </li>
               <li class="nav-item">
-                  <a href="#" class="nav-link">Contact</a>
+                <a href="#" class="nav-link">Contact</a>
               </li>
-          </ul>
-          <!-- Hamburger -->
-          <div class="hamburger">
+            </ul>
+            <!-- Hamburger -->
+            <div class="hamburger">
               <span class="bar"></span>
               <span class="bar"></span>
-          </div>
-        </nav>
+            </div>
+          </nav>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Home Section -->
-  <!-- Eyes Section -->
-  <div id="home" class="container px-4 text-center">
-    <div class="row">
-      <div class="col-12 col-lg-6">
-        <img loading="lazy" class="img-fluid eyes-img" src="./images/myEyes Kopie.jpeg" alt="image of eyes">
+    <!-- Home Section -->
+    <!-- Eyes Section -->
+    <div id="home" class="container px-4 text-center">
+      <div class="row">
+        <div class="col-12 col-lg-6">
+          <img
+            loading="lazy"
+            class="img-fluid eyes-img"
+            src="./images/myEyes Kopie.jpeg"
+            alt="image of eyes"
+          />
+        </div>
+        <div
+          class="col-12 col-lg-6 d-flex justify-content-center align-items-end eyes-section"
+        >
+          <h2 class="eyes-text">
+            Am <span class="name">Akradeth Tayarat</span>
+          </h2>
+        </div>
       </div>
-      <div class="col-12 col-lg-6 d-flex justify-content-center align-items-end eyes-section">
-        <h2 class="eyes-text">Am <span class="name">Akradeth Tayarat</span></h2>
+      <hr />
+      <!-- Nose Section -->
+      <div class="row">
+        <div
+          class="col-12 col-lg-6 d-flex justify-content-center align-items-end nose-section"
+        >
+          <h2 class="nose-text">
+            A <span class="webdev">Web Developer</span> everyone
+          </h2>
+        </div>
+        <div class="col-12 col-lg-6">
+          <img
+            loading="lazy"
+            class="img-fluid nose-img"
+            src="./images/myNose Kopie.jpeg"
+            alt="image of a nose"
+          />
+        </div>
+      </div>
+      <hr />
+      <!-- Mouth Section -->
+      <div class="row">
+        <div class="col-12 col-lg-1 align-self-lg-end">
+          <h2 class="said">
+            It is said by <span class="word-of-text">word of</span>
+          </h2>
+        </div>
+        <div class="col-12 col-lg-6">
+          <img
+            loading="lazy"
+            class="img-fluid mouth-img"
+            src="./images/myMouth Kopie.jpeg"
+            alt="image of a mouth"
+          />
+        </div>
+        <div
+          class="col-6 col-lg-3 px-lg-3 d-flex align-items-center justify-content-end justify-content-lg-center align-self-lg-end good-one"
+        >
+          <h2>that he is a good</h2>
+        </div>
+        <div
+          class="col-6 col-lg-2 px-lg-3 d-flex align-items-center justify-content-start"
+        >
+          <h2 class="number-one"><span class="number-character">#</span>1</h2>
+        </div>
       </div>
     </div>
-    <hr>
-    <!-- Nose Section -->
-    <div class="row">
-      <div class="col-12 col-lg-6 d-flex justify-content-center align-items-end nose-section">
-        <h2 class="nose-text">A <span class="webdev">Web Developer</span> everyone</h2>
-      </div>
-      <div class="col-12 col-lg-6">
-        <img loading="lazy" class="img-fluid nose-img" src="./images/myNose Kopie.jpeg" alt="image of a nose">
-      </div>
-    </div>
-    <hr>
-    <!-- Mouth Section -->
-    <div class="row">
-      <div class="col-12 col-lg-1 align-self-lg-end">
-        <h2 class="said">It is said by <span class="word-of-text">word of</span> </h2>
-      </div>          
-      <div class="col-12 col-lg-6">
-        <img loading="lazy" class="img-fluid mouth-img" src="./images/myMouth Kopie.jpeg" alt="image of a mouth">
-      </div>
-      <div class="col-6 col-lg-3 px-lg-3 d-flex align-items-center justify-content-end justify-content-lg-center align-self-lg-end good-one">
-        <h2>that he is a good</h2>
-      </div>
-      <div class="col-6 col-lg-2 px-lg-3 d-flex align-items-center justify-content-start">
-        <h2 class="number-one"><span class="number-character">#</span>1</h2>
-      </div>
-    </div>
-  </div>
-  <!-- Bootstrap JS Link -->
-  <script src="main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
+    <!-- Bootstrap JS Link -->
+    <script src="main.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
