--- a/index.html
+++ b/index.html
@@ -29,16 +29,13 @@
         <nav class="navbar px-4">
           <ul class="nav-menu">
               <li class="nav-item">
-                  <a href="#" class="nav-link">Services</a>
+                  <a href="#" class="nav-link">My Efforts</a>
               </li>
               <li class="nav-item">
-                  <a href="#" class="nav-link">Blog</a>
+                  <a href="#" class="nav-link">Who am I</a>
               </li>
               <li class="nav-item">
-                  <a href="#" class="nav-link">About</a>
-              </li>
-              <li class="nav-item">
-                  <a href="#" class="nav-link">Contact</a>
+                  <a href="#" class="nav-link">Contact Me</a>
               </li>
           </ul>
           <!-- Hamburger -->
